--- a/3 лаба/css/main.css
+++ b/3 лаба/css/main.css
@@ -7,6 +7,7 @@ body{
     font-family: 'Sansita Swashed', cursive;
 }
 header{
+    top:0;
    position: fixed;
    background-color: #fff;
    height:120px;
