--- a/3 лаба/css/reg.css
+++ b/3 лаба/css/reg.css
@@ -6,7 +6,7 @@ body {
     margin: 0;
     padding: 0;
     background: url(https://www.funnyart.club/uploads/posts/2022-01/1641462933_15-www-funnyart-club-p-besshovnie-foni-dlya-saitov-15.jpg) center center no-repeat;
-    background-size: cover;
+    object-fit:  cover;
 }
 
 .iol {
